--- a/PT/12_2.md
+++ b/PT/12_2.md
@@ -1,2 +1,22 @@
 # 12_2  随机过程的统计描述——概率分布和数字特征
+[12_2 PPT][1]
+### 随机过程的统计描述——概率分布和数字特征
+2.1 概率分布 
+     
+        n维分布函数  
+        1维分布函数  
+        有限维分布族  
+  
+2.2 随机过程的数字特征  
 
+        均值函数  
+        均方值函数  
+        方差函数  
+        协方差函数  
+        相关函数  
+
+2.3 二维随机过程的分布函数和数字特征  
+2.4 随机序列的数字特征  
+2.5 复随机过程  
+
+[1]:https://pan.baidu.com/s/1fN5DTuF6kZrGQ4SBOi9SIA
