PT add some rem.md pics

--- a/PT/12_2.md
+++ b/PT/12_2.md
@@ -6,6 +6,8 @@
         n维分布函数  
         1维分布函数  
         有限维分布族  
+        例子：设随机过程X(t)=Y+Zt, tT=(-∞,+∞),其中 Y，Z是相互独立的服从N(0,1)的随机变量，求{X(t),-∞<t<+∞}的一，二维概率密度。   
+        
   
 2.2 随机过程的数字特征  
 
@@ -13,10 +15,25 @@
         均方值函数  
         方差函数  
         协方差函数  
-        相关函数  
+        相关函数   
+        设随机过程 X(t)=Ycosωt+Zsinωt,t≥0,其中Y,Z是相互独立的随机变量，且E(Y)=E(Z)=0, D(Y)=D(Z)= 2，求{X(t),t≥0}均值函数 x(t)和自相关函数Rx(s,t)。 
 
 2.3 二维随机过程的分布函数和数字特征  
+    
+        2.3.1二维随机过程定义  
+        2.3.2有限维分布函数和独立性  
+        2.3.3二维随机过程的数字特征
+                互相关函数   
+                互协方差函数  
+        例1: 设有两个随机过程X(t)=g1(t+ )和Y(t)=g2(t + )，其中g1(t )和g2(t )都是周期为L的周期函数, 是在(0,L)上服从均匀分布的随机变量.求互相关函数RXY(s，t)的表达式.
+        例: 设X(t)为信号过程,Y(t)为噪声过程，令 W(t)=X(t)+Y(t)，则.....
 2.4 随机序列的数字特征  
+        均值函数  
+        均方值函数  
+        方差函数  
+        协方差函数  
+        相关函数 
 2.5 复随机过程  
-
+        2.5.1复随机过程定义  
+        2.5.2复随机过程的数字特征  
 [1]:https://pan.baidu.com/s/1fN5DTuF6kZrGQ4SBOi9SIA
