--- a/PT/12_3.md
+++ b/PT/12_3.md
@@ -2,7 +2,8 @@
 
 [12_3 PPT 从31页开始][1]   
 
-###独立增量过程  
+### 独立增量过程  
+
 1.定义                     
 
 
@@ -14,5 +15,24 @@
  
                    2.1   
                    2.2
-  
+
+### 两个过程   
+
+1.泊松过程   
+   
+  * 初值为零  
+  * 独立增量  
+  * N(t+s) - N(s) ~ pai(浪不大t)服从以浪不大为参数的泊送分布
+
+2.维纳过程(也叫布朗运动)    
+
+  * 平稳的独立增量  
+  * 增量服从正态分布W(t) - W(s)~(0,sigma^2(t-s))  
+  * W(0) = 0     
+
+### （高斯过程）正态过程  
+
+  * n维随机变量服从n维正态分布  
+       
+
 [1]:https://pan.baidu.com/s/1XS0hHHQHLPSxEbZ2Jujzeg
