--- a/DB/c10/c10_2.md
+++ b/DB/c10/c10_2.md
@@ -56,7 +56,35 @@
 读锁和读锁相容，读锁和写锁，写锁和写锁不想容
 所有的锁都在commit之后才释放  
 ##### 两段锁协议  
-遵循两段锁协议的一定可串行，可避免3种不一致问题      
-所有的事务能找到一个分割点，上面是加锁的过程，下面是解锁的过程   
-所有的加锁都在第 一个解锁之前，第一个解锁之后就没有加锁了
+遵循两段锁协议的一定可串行，可避免3种不一致问题     
+          
+           1.所有的读加共享锁，所有的写加排他锁  
+           2.所有的事务能找到一个分割点，上面是加锁的过程，下面是解锁的过程   
+             所有的加锁都在第一个解锁之前，第一个解锁之后就没有加锁了
 
+#####  严格的两段锁协议  
+
+> 原因在于解锁太早，如果在commit之前别人又用了我解锁之后的资源，结果最后我rollback了，别人也得cascading rollback,用户体验不好（给都给我了，还拿回去？？？？）。不如直接先等会     
+===解决==>  
+
+严格的两段锁协议:所有锁的释放是在事务提交之后的  
+
+> 普通的两段锁和严格的两段锁协议的并发度谁高？  
+>> 他们都可以保证数据一致性，但是普通...并发度更高  
+
+#### 死锁     
+不管哪种两段锁协议，都可能发生死锁，并没有完全避免。  
+
+##### 如何检测死锁?     
+超时法，有向图法   ==> dbms的事    
+
+##### 如何应对死锁?     
+强行中断一个，让其中一个先执行，执行完了再执行另一个。  ==>dbms的事   
+
+##### 如何预防死锁?    ==> 我们的事      
+(项目组)约定事务封锁的顺序  
+         
+        不要出现a:wait(A);wait(B);  
+        b:wait(B);wait(A); 的情况       
+
+        
