--- a/DB/c10/c10_2.md
+++ b/DB/c10/c10_2.md
@@ -1,4 +1,7 @@
-# 并发控制 concurrency control
+# 并发控制 concurrency control  
+
+------
+
 > 统一提交给dbms的那么多任务，怎么控制他们不干扰 
 > 为什么要并发控制  
 
@@ -72,19 +75,28 @@
 > 普通的两段锁和严格的两段锁协议的并发度谁高？  
 >> 他们都可以保证数据一致性，但是普通...并发度更高  
 
-#### 死锁     
+##### 死锁     
 不管哪种两段锁协议，都可能发生死锁，并没有完全避免。  
 
-##### 如何检测死锁?     
+###### 如何检测死锁?     
 超时法，有向图法   ==> dbms的事    
 
-##### 如何应对死锁?     
+###### 如何应对死锁?     
 强行中断一个，让其中一个先执行，执行完了再执行另一个。  ==>dbms的事   
 
-##### 如何预防死锁?    ==> 我们的事      
+###### 如何预防死锁?    ==> 我们的事      
 (项目组)约定事务封锁的顺序  
          
-        不要出现a:wait(A);wait(B);  
-        b:wait(B);wait(A); 的情况       
+        不要出现
+        a:wait(A);wait(B);  
+        b:wait(B);wait(A);
+        的情况  
+#### 锁的颗粒度    
+最大的颗粒度 -- 库        
+库 > 表 > 行 > 数据项（一个单元格）  
+
+目前dbms只提供到 行 级别  
+
+     
 
         
