--- a/OS/l10/l10.md
+++ b/OS/l10/l10.md
@@ -90,6 +90,62 @@ Block  to  be  accessed  =  Q  +  starting  address  Displacement  into  block  
 <img src="https://s26.postimg.cc/8zhcdom4p/QQ20180601-0.jpg">
 <font color=red>以上的要会画，理解，并且会算</font>
 
+## Free-Space management  
+algorithm:
+* bit vector  
+* linked list 
+* counting  
+
+### bit vector  
+0 - allocated  
+1 - free  
+bitmap length  
+
+> how to find the 第一个空闲块？ 
+
+找到第一个非0的字（假设是16位）  
+在这个非0的字里找到第一个是1bit的  
+看看够不够，然后继续往下走  
+
+If first K words is 0, & (K + 1)th word > 0,   
+the first (K + 1)th word's first 1 bit has offset L,   
+first  free  block  number  N = K × 16 + L  
+
+But copy in memory and disk may differ    
+Cannot get contiguous space easily    
+
+
+  
+  # linked list  
+ linked list  
+     
+Link together al  l the free disk blocks
+First free b    lock
+
+Cannot get contiguous space easily  
+No waste of space     
+
+### counting  
+一个table里有许多  起始
+
+Each = first free block number & a counter  (number of free blocks)  
+
+## Each = first free block number & a counter  (number of free blocks)
+Shorter than linked list 
+
+
+## Efficiency （空间） and Performance（时间）  
+<font color=green>就读了一下ppt</font>    
+
+
+## recovery  
+<font color=green>也没怎么讲</font>   
+
+
+
+
+
+
    
 
 
